# autonomous-alpha-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml  prometheus.yml
grafana/dashboards/: alpha_pipeline.json
grafana/provisioning/dashboards/: dashboards.yaml
src/alpha_pipeline/: config.py  main.py  state.py
src/alpha_pipeline/agents/: decision.py  graph.py  researcher.py
src/alpha_pipeline/ingestion/: lob.py  metrics.py  mock_server.py  orchestrator.py
src/alpha_pipeline/rag/: corpus.py  vector_store.py
src/alpha_pipeline/telemetry/: business_value.py  metrics.py  monitor.py
src/alpha_pipeline/utils/: backoff.py  circuit_breaker.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_backoff.py  test_circuit_breaker.py  test_decision_agent.py  test_lob.py  test_metrics.py  test_monitor.py  test_orchestrator.py  test_rag.py  test_state.py  test_telemetry.py
