[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
[project]
name = "autonomous-alpha-pipeline"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.1.0",
    "langchain-core>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "anthropic>=0.85.0",
    "websockets>=16.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "prometheus-client>=0.24.0",
    "httpx>=0.28.0",
    "structlog>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["src"]
